# MayaPE

./: .gitmodules  README.md  settings.gradle  settings.gradle.kts
MSA-Rapid-Fetch/: LICENSE  build.gradle.kts  settings.gradle.kts
MSA-Rapid-Fetch/MSA-Rapid-Fetch/: README.md  build.gradle.kts  consumer-rules.pro  proguard-rules.pro
MSA-Rapid-Fetch/gradle/: libs.versions.toml
MSA-Rapid-Fetch/gradle/wrapper/: gradle-wrapper.properties
MSA-Rapid-Fetch/src/main/java/com/kitsuri/msa/rapidfetch/: AuthCallback.kt
app/: build.gradle  build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/: HXO.ini  launcher.dex
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/ELFChecker/: CMakeLists.txt
app/src/main/cpp/Shoki/: CMakeLists.txt  ElfTool.cpp  jni_bridge.cpp  logger.cpp  logger.h
app/src/main/cpp/hxo-loader/: HXO.ini
app/src/main/cpp/mio/: xmake.lua
app/src/main/cpp/mio/src/gui/: jni_imgui.cpp  renderer.cpp
app/src/main/cpp/mio/src/logger/: jni_logger.cpp
app/src/main/cpp/src/: hooks.cpp  imgui_setup.cpp  jni_main.cpp  main.cpp  maya.h
app/src/main/cpp/src/libs/And64InlineHook/: And64InlineHook.cpp  And64InlineHook.hpp
app/src/main/cpp/src/misc/: client_logger.h
app/src/main/java/io/kitsuri/mayape/Models/: MainViewModel.kt
app/src/main/java/io/kitsuri/mayape/application/: AppContext.kt  HomeActivity.kt  MainActivity.kt
app/src/main/java/io/kitsuri/mayape/manager/: DataClassManager.kt  DexManager.kt  (+7 more)
app/src/main/res/drawable/: background_button.xml  background_button_dark.xml  bg_news_button.xml  bg_news_red_left.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_logo.xml
app/src/main/res/layout/: activity_main.xml  activity_maya.xml
app/src/main/res/values/: colors.xml  strings.xml  theme.xml  themes.xml
app/src/main/res/values-v27/: theme.xml
app/src/main/res/values-v29/: theme.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
preloader/: build.gradle
stubs/src/main/java/: stubs.kt
(+94 files in other folders)
